Changed carousel + fixed horizontal scroll again

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,8 @@ div.carousel-item {
 }
 
 div.carousel-item img {
-	width: 100%;
-	height: 100%;
+	width: 100%; 
+	height: auto;
 }
 
 .carousel-caption h5 {
